<resources>
    <string name="app_name">Remask Siswa</string>

    <string name="openDrawer">Drawer dibuka</string>
    <string name="closeDrawer">Drawer ditutup</string>
    <string name="navigation_view_item_1">Beranda</string>
    <string name="navigation_view_item_2">Profil</string>
    <string name="navigation_view_item_3">Daftar</string>
    <string name="navigasi_kategori_2">Sub Item Navigasi</string>
    <string name="navigation_view_item_4">Settings</string>
    <string name="navigation_view_item_5">About</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="current_date">March, 2018</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>
    <string-array name="organisasi_type">
    <item>Organisasi</item>
    </string-array>
    <string-array name="lain_lain_type">
        <item>Lain Lain</item>
    </string-array>
    <string-array name="pendidikan_type">
        <item>Pendidikan</item>
    </string-array>
    <string-array name="nama_group">
        <item>Amburadul</item>
    </string-array>
    <string-array name="sort_types">
        <item>Kategori</item>
        <item>Tanggal</item>
    </string-array>


    <string-array name="set_alarm">
        <item>7 hari sebelum</item>
        <item>5 hari sebelum</item>
        <item>3 hari sebelum</item>
        <item>1 hari sebelum</item>
        <item>hari ini</item>


    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">About Us</string>
    <string name="title_activity_create_note">Create Note</string>
    <string name="title">Test</string>
    <string name="detail">Small Text</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_edit__note">Edit Note</string>
    <string name="New">Create New Note</string>
    <string name="back">Back to Main</string>
    <string name="save">Save Note</string>
    <string name="edit">Edit Note</string>
    <string name="discard">Discard Note</string>
    <string name="note_type_text">Note Type:</string>
    <string name="title_activity_alert">Alert</string>
    <string name="Not_Set">Not Set</string>
    <string name="hour_minutes">HH:mm</string>
    <string name="alert_title">title</string>
    <string name="added_alert">An Alert can be added</string>
    <string name="rodId">rowID</string>
    <string name="Alertnotifty">"Alert: "</string>
    <string name="alerttitle">title</string>
    <string name="delete_title">Delete Selected Note</string>
    <string name="delete_message">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rodID">rowID</string>
    <string name="rowID">rowID</string>
    <string name="row_id">rowID</string>
    <string name="intent_row_id">rowID</string>
    <string name="row_id_long">rowID</string>
    <string name="alarm_active">An Alert can be added!</string>
    <string name="row_id_log">rowID</string>
    <string name="title_hint">Enter Title</string>
    <string name="hint_description">Enter Description</string>
    <string name="set_alert">Set Alert</string>
    <string name="textview_date">Select Date</string>
    <string name="txt_time">Enter Time:</string>
    <string name="txt_edit_hint">Enter Title</string>
    <string name="detail_hint">Enter Description</string>
    <string name="type_note">Note Type:</string>
    <string name="view_title">Large Text</string>
    <string name="view_detail">Medium Text</string>
    <string name="note_type">Medium Text</string>
    <string name="type_list_entry">Small Text</string>
    <string name="time_vie">testtime</string>
    <string name="alarmtext">Alert: </string>
    <string name="dateformate">dd/MM/yyyy</string>
    <string name="Not_Set_Alert">Not Set</string>
    <string name="ok">Ok</string>
    <string name="title_msg">title</string>
    <string name="titttle">title</string>
    <string name="pref_login_status">com.abc.preference_login_status</string>
    <string name="pref_user_name">com.abc.preference_user_name</string>
    <string name="pref_file">com.abc.preference_file</string>

    <string name="sett_reminder_header">Set Reminder</string>
    <string name="sett_reminder_label">Remind Me</string>
    <string name="sett_reminder_desc">We will remind you to make entiries of your expense</string>
    <string name="sett_reminder_time_label">Set Reminder Time</string>
    <string name="sett_reminder_time_content">8 : 00 PM</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
</resources>
