<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme"
        android:elevation="4dp">
    </android.support.v7.widget.Toolbar>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/spinnerNoteType"
                android:layout_alignParentBottom="true">

                <GridLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                </GridLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nama Group"
                    android:textStyle="bold"/>

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerGroup"
                    android:entries="@array/nama_group"
                    android:layout_below="@+id/description"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toRightOf="@+id/txttitle"
                    android:layout_toEndOf="@+id/txttitle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nama Tugas"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txttitle"
                    android:maxLength="25"
                    android:drawableLeft="@drawable/ic_event_black_24dp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_event_black_24dp"
                    android:hint="@string/title_hint"
                    android:layout_below="@+id/btnBack"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:singleLine="true"
                    android:editable="true" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/scrollView4" >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/description"
                        android:drawableLeft="@drawable/ic_description_black_24dp"
                        android:drawablePadding="5dp"
                        android:drawableStart="@drawable/ic_description_black_24dp"
                        android:hint="@string/hint_description"
                        android:layout_below="@+id/txttitle"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:singleLine="false"
                        android:editable="true"
                        android:lines="3"
                        android:maxLength="140"
                        android:nestedScrollingEnabled="false" />
                </ScrollView>

                <GridLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:drawableLeft="@drawable/ic_format_line_spacing_black_24dp"
                        android:drawablePadding="5dp"
                        android:drawableStart="@drawable/ic_format_line_spacing_black_24dp"
                        android:text="Kategori"
                        android:id="@+id/txtNoteType"
                        android:layout_below="@+id/description"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtkat"
                        android:text="   Pendidikan"
                        android:textSize="15dp"
                        android:layout_below="@+id/description"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_toRightOf="@+id/txttitle"
                        android:layout_toEndOf="@+id/txttitle" />


                </GridLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="20dp"
                    android:drawableLeft="@drawable/ic_notifications_active_black_24dp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_notifications_active_black_24dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Alarm"
                    android:id="@+id/txtAlarm"
                    android:layout_below="@+id/txttitle"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerAlarm"
                    android:entries="@array/set_alarm"
                    android:layout_below="@+id/spinnerNoteType"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_marginTop="15dp"
                        android:text="@string/txt_time"
                        android:textStyle="bold"
                        android:textSize="24dp"
                        android:id="@+id/txtTime" />

                    <LinearLayout
                        android:id="@+id/llReminder"
                        style="@style/settings_item_layout">

                        <TextView
                            android:id="@+id/tv_reminder_header"
                            style="@style/settings_header"
                            android:text="@string/sett_reminder_header" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/activity_vertical_margin">

                            <TextView
                                android:id="@+id/tv_reminder_label"
                                style="@style/settings_sub_header"
                                android:text="@string/sett_reminder_label" />

                            <android.support.v7.widget.SwitchCompat
                                android:id="@+id/timerSwitch"
                                android:theme="@style/switch_theme"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:gravity="center_vertical"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"/>

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/tv_reminder_desc"
                            style="@style/settings_details"
                            android:paddingTop="@dimen/items_top_padding"
                            android:paddingBottom="@dimen/items_inbetween_space"
                            android:text="@string/sett_reminder_desc" />

                        <LinearLayout
                            android:id="@+id/ll_set_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="@dimen/items_inbetween_space">

                                <TextView
                                    android:id="@+id/tv_reminder_time_label"
                                    style="@style/settings_sub_header"
                                    android:text="@string/sett_reminder_time_label" />

                                <ImageView
                                    android:id="@+id/iv_timer"
                                    android:layout_width="@dimen/timer_icon"
                                    android:layout_height="@dimen/timer_icon"
                                    android:layout_alignParentEnd="true"
                                    android:layout_alignParentRight="true"
                                    android:layout_centerVertical="true"
                                    android:src="@drawable/ic_timer" />

                            </RelativeLayout>


                            <TextView
                                android:id="@+id/tv_reminder_time_desc"
                                style="@style/settings_details"
                                android:paddingTop="@dimen/items_top_padding"
                                android:paddingBottom="@dimen/items_inbetween_space"
                                android:text="@string/sett_reminder_time_content" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>
