<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme"
        android:elevation="4dp">
    </android.support.v7.widget.Toolbar>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinnerNoteType"
            android:layout_alignParentBottom="true">

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            </GridLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nama Tugas"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txttitle"
                android:maxLength="25"
                android:drawableLeft="@drawable/ic_event_black_24dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_event_black_24dp"
                android:hint="@string/title_hint"
                android:layout_below="@+id/btnBack"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:singleLine="true"
                android:editable="true" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView4" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:drawableLeft="@drawable/ic_description_black_24dp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_description_black_24dp"
                    android:hint="@string/hint_description"
                    android:layout_below="@+id/txttitle"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:singleLine="false"
                    android:editable="true"
                    android:lines="3"
                    android:maxLength="140"
                    android:nestedScrollingEnabled="false" />
            </ScrollView>

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:drawableLeft="@drawable/ic_format_line_spacing_black_24dp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_format_line_spacing_black_24dp"
                    android:text="Kategori"
                    android:id="@+id/txtNoteType"
                    android:layout_below="@+id/description"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerNoteType"
                    android:entries="@array/kategori_type"
                    android:layout_below="@+id/description"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toRightOf="@+id/txttitle"
                    android:layout_toEndOf="@+id/txttitle" />


            </GridLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:drawableLeft="@drawable/ic_notifications_active_black_24dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_notifications_active_black_24dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Alarm"
                android:id="@+id/txtAlarm"
                android:layout_below="@+id/txttitle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerAlarm"
                android:entries="@array/set_alarm"
                android:layout_below="@+id/spinnerNoteType"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginTop="15dp"
                    android:text="@string/txt_time"
                    android:textStyle="bold"
                    android:textSize="24dp"
                    android:id="@+id/txtTime" />

                <TimePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/timePicker"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
</LinearLayout>
